from protocol.Visitor import *
from terms.Adapter import *

class Component(object):

    def accept(self, v):
        pass



