class Enumeration(object):
    """
        Has atributes:
            - string name
            - EnumerationElement list elements
            - Interface interface
    """
    pass
